--- a/Go4Venue-UI/.settings/org.eclipse.wst.common.component
+++ b/Go4Venue-UI/.settings/org.eclipse.wst.common.component
@@ -4,10 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/properties/dev"/>
         <property name="java-output-path" value="/Go4Venue-UI/target/classes"/>
-        <property name="context-root" value="Go4Venue-UI"/>
+        <property name="context-root" value="Sample"/>
     </wb-module>
 </project-modules>
