--- a/Go4Venue-UI/src/main/webapp/resources/assets/css/app.css
+++ b/Go4Venue-UI/src/main/webapp/resources/assets/css/app.css
@@ -1,14 +1,4 @@
-/*   
- * Template Name: Unify - Responsive Bootstrap Template
- * Description: Business, Corporate, Portfolio, E-commerce, Blog and One Page Template.
- * Version: 1.8
- * Author: @htmlstream
- * Website: http://htmlstream.com
-*/
-
-/*Reset Styles
-------------------------------------*/
-* {
+ {
    border-radius: 0;
 }
 
@@ -93,7 +83,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
   margin: 0 0 -2px 0;
   padding-bottom: 5px;
   display: inline-block;
-  border-bottom: 2px solid #72c02c;
+  border-bottom: 2px solid #7323DC;
 }
 
 .headline-md {
@@ -216,7 +206,7 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
   content: " ";
   margin-left: -35px;
   position: absolute;
-  background: #72c02c;  
+  background: #7323DC;  
 }
 
 .title-v1 p {
@@ -348,7 +338,7 @@ h3.title-v3-xs {
   margin-left: -15px;
   text-align: center;
   position: absolute;
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .headline-center p {
@@ -452,7 +442,7 @@ h3.title-v3-xs {
   content: " ";
   bottom: -5px;
   position: absolute;
-  background: #72c02c;
+  background: #7323DC;
 }
 
 /*Headline v2
@@ -684,7 +674,7 @@ h3.heading-xs {
 .tab-v1 .nav-tabs { 
   border: none;
   background: none;
-  border-bottom: solid 2px #72c02c;   
+  border-bottom: solid 2px #7323DC;   
 }
 
 .tab-v1 .nav-tabs a { 
@@ -697,7 +687,7 @@ h3.heading-xs {
 .tab-v1 .nav-tabs > .active > a:focus { 
   color: #fff;
   border: none; 
-  background: #72c02c; 
+  background: #7323DC; 
 }
 
 .tab-v1 .nav-tabs > li > a { 
@@ -705,7 +695,7 @@ h3.heading-xs {
 }
 .tab-v1 .nav-tabs > li > a:hover { 
   color: #fff; 
-  background: #72c02c; 
+  background: #7323DC; 
 }
 
 .tab-v1 .tab-content { 
@@ -737,7 +727,7 @@ h3.heading-xs {
   background: #fff;
   padding: 7px 15px 9px;
   border: solid 1px #eee;
-  border-top: solid 2px #72c02c;
+  border-top: solid 2px #7323DC;
   border-bottom: none !important;
 }
 
@@ -760,7 +750,7 @@ h3.heading-xs {
 .tab-v3 .nav-pills li a:hover,
 .tab-v3 .nav-pills li.active a {
   color: #fff;
-  background: #72c02c;
+  background: #7323DC;
   border: solid 1px #68af28;
 }
 
@@ -914,8 +904,8 @@ h3.heading-xs {
 .pagination > .active > span:hover, 
 .pagination > .active > a:focus, 
 .pagination > .active > span:focus {
-   border-color: #72c02c;
-   background-color: #72c02c;
+   border-color: #7323DC;
+   background-color: #7323DC;
 }
 
 /*Pagination Without Space*/
@@ -955,7 +945,7 @@ h3.heading-xs {
 .pager.pager-v3 li > a:hover, 
 .pager.pager-v3 li > a:focus {
    color: #fff;
-   background: #72c02c;
+   background: #7323DC;
 }
 
 /*Pager Amount*/
@@ -1070,7 +1060,7 @@ h3.heading-xs {
 
 .sidebar-nav-v1 ul li:hover a,
 .sidebar-nav-v1 ul li.active a {
-  color: #72c02c;
+  color: #7323DC;
 }
 
 /*Sidebar Badges*/
@@ -1126,7 +1116,7 @@ h3.heading-xs {
    font-weight: 400;
    padding: 6px 13px;
    position: relative;
-   background: #72c02c;
+   background: #7323DC;
    white-space: nowrap;
    display: inline-block;
    text-decoration: none;
@@ -1428,7 +1418,7 @@ a.btn-u-xs {
 }
 
 .btn-u.btn-brd {
-  border-color: #72c02c;
+  border-color: #7323DC;
 }
 .btn-u.btn-brd:hover {
   color: #5fb611;
@@ -1637,7 +1627,7 @@ span.badge,
 span.label-u,
 span.badge-u,
 .list-group-item.active>.badge.badge-u {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 span.label-blue,
@@ -1939,15 +1929,15 @@ i.icon-4x.icon-line {
 }
 
 .link-icon:hover i {
-  color: #72c02c;
+  color: #7323DC;
   background: none;
-  border: solid 1px #72c02c;
+  border: solid 1px #7323DC;
 }
 
 .link-bg-icon:hover i {
-  color: #72c02c;
-  background: #72c02c;
-  border-color: #72c02c;
+  color: #7323DC;
+  background: #7323DC;
+  border-color: #7323DC;
   color: #fff !important;
 }
 
@@ -1971,8 +1961,8 @@ i.icon-color-light-green, {
 }
 
 i.icon-color-u {
-   color: #72c02c;
-   border: solid 1px #72c02c;
+   color: #7323DC;
+   border: solid 1px #7323DC;
 }
 i.icon-color-blue {
    color: #3498db;
@@ -2053,7 +2043,7 @@ i.icon-bg-light-green {
 }
 
 i.icon-bg-u {
-   background: #72c02c;
+   background: #7323DC;
 }
 i.icon-bg-blue {
    background: #3498db;
@@ -2228,7 +2218,7 @@ i.icon-bg-light-grey {
 
 .content-boxes-v4 i {
   width: 25px;
-  color: #72c02c;
+  color: #7323DC;
   font-size: 35px;
   margin-top: 10px;
 }
@@ -2261,7 +2251,7 @@ i.icon-bg-light-grey {
 
 .content-boxes-v5:hover i {
   color: #fff;
-  background: #72c02c;
+  background: #7323DC;
 }
 
 /*Content Boxes v6*/
@@ -2304,11 +2294,11 @@ i.icon-bg-light-grey {
 }
 
 .content-boxes-v6:hover i {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .content-boxes-v6:hover i:after {
-  border-color: #72c02c;
+  border-color: #7323DC;
 }
 
 /*Colored Content Boxes
@@ -2346,7 +2336,7 @@ i.icon-bg-light-grey {
 }
 
 .service-block-u {
-  background: #72c02c;
+  background: #7323DC;
 }
 .service-block-blue {
   background: #3498db;
@@ -2413,7 +2403,7 @@ i.icon-bg-light-grey {
 }
 
 .funny-boxes p a {
-  color: #72c02c;
+  color: #7323DC;
 }
 
 .funny-boxes .funny-boxes-img li {
@@ -2422,7 +2412,7 @@ i.icon-bg-light-grey {
 }
 
 .funny-boxes .funny-boxes-img li i {
-  color: #72c02c;
+  color: #7323DC;
   font-size: 12px;
   margin-right: 5px;
 }
@@ -2531,7 +2521,7 @@ i.icon-bg-light-grey {
 
 /*Green Left Bordered Funny Box**/
 .funny-boxes-left-green {
-  border-left: solid 2px #72c02c;
+  border-left: solid 2px #7323DC;
 }
 
 .funny-boxes-left-green:hover {
@@ -2569,7 +2559,7 @@ i.icon-bg-light-grey {
 /*Text Dropcap*/
 .dropcap {
   float: left; 
-  color: #72c02c; 
+  color: #7323DC; 
   padding: 5px 0;
   font-size: 45px; 
   font-weight: 200;
@@ -2586,7 +2576,7 @@ i.icon-bg-light-grey {
   font-weight: 200;
   line-height: 35px; 
   text-align: center;
-  background: #72c02c;
+  background: #7323DC;
   margin: 4px 10px 0 0;
 }
 
@@ -2599,7 +2589,7 @@ i.icon-bg-light-grey {
 }
 
 .text-highlights-green {
-   background: #72c02c;   
+   background: #7323DC;   
 }
 .text-highlights-blue {
    background: #3498db;
@@ -2641,7 +2631,7 @@ i.icon-bg-light-grey {
    border-color: #95a5a6;
 }
 .text-border-green {
-   border-color: #72c02c;
+   border-color: #7323DC;
 }
 .text-border-blue {
    border-color: #3498db;
@@ -2714,7 +2704,7 @@ blockquote.hero.text-right:hover {
 
 blockquote:hover,
 blockquote.text-right:hover {
-  border-color: #72c02c;
+  border-color: #7323DC;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
@@ -2727,7 +2717,7 @@ blockquote.bq-dark:hover {
 }
 
 blockquote.bq-green {
-  border-color: #72c02c;
+  border-color: #7323DC;
 }
 
 /*Blockquote Hero Styles*/
@@ -2758,7 +2748,7 @@ blockquote.hero.hero-dark:hover {
 }
 
 blockquote.hero.hero-default {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 blockquote.hero.hero-default:hover {
@@ -2811,14 +2801,14 @@ blockquote.hero.hero-default small {
 /*Tag Boxes v1*/
 .tag-box-v1 {
   border: solid 1px #eee;
-  border-top: solid 2px #72c02c;
+  border-top: solid 2px #7323DC;
 }
 
 /*Tag Boxes v2*/
 .tag-box-v2 {
   background: #fafafa;
   border: solid 1px #eee;
-  border-left: solid 2px #72c02c;
+  border-left: solid 2px #7323DC;
 }
 
 /*Tag Boxes v3*/
@@ -2853,7 +2843,7 @@ blockquote.hero.hero-default small {
 /*Tag Boxes v7*/
 .tag-box-v7 {
   border: solid 1px #eee;
-  border-bottom: solid 2px #72c02c;
+  border-bottom: solid 2px #7323DC;
 }
 
 /*Testimonials
@@ -2864,7 +2854,7 @@ blockquote.hero.hero-default small {
 }
 
 .testimonials .testimonial-info {
-  color: #72c02c;
+  color: #7323DC;
   font-size: 16px;
   padding: 0 15px;
   margin-top: 18px;
@@ -2910,7 +2900,7 @@ blockquote.hero.hero-default small {
 
 .testimonials .carousel-arrow i:hover {
   color: #fff;
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .testimonials .carousel-control {
@@ -3007,16 +2997,16 @@ blockquote.hero.hero-default small {
 
 /*Testimonials Default*/
 .testimonials-bg-default .item p {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .testimonials.testimonials-bg-default .item p:after,
 .testimonials.testimonials-bg-default .item p:after {
-  border-top-color: #72c02c;
+  border-top-color: #7323DC;
 }
 
 .testimonials-bg-default .carousel-arrow i {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .testimonials.testimonials-bg-default .carousel-arrow i:hover {
@@ -3066,11 +3056,11 @@ blockquote.hero.hero-default small {
 
 /*Panel Unify*/
 .panel-u {
-   border-color: #72c02c;
+   border-color: #7323DC;
 }
 
 .panel-u > .panel-heading {
-   background: #72c02c;
+   background: #7323DC;
 }
 
 /*Panel Blue*/
@@ -3239,7 +3229,7 @@ blockquote.hero.hero-default small {
 }
 
 .progress-bar-u {
-  background: #72c02c;
+  background: #7323DC;
 }
 
 .progress-bar-blue {
@@ -3328,7 +3318,7 @@ blockquote.hero.hero-default small {
 /*Count Stars
 ------------------------------------*/
 .stars-existing {
-  color: #72c02c;
+  color: #7323DC;
   cursor: pointer;
 }
 
@@ -3509,7 +3499,7 @@ img.image-md {
   font-size: 13px; 
   margin-right: 7px;
   text-align: center;
-  background: #72c02c;
+  background: #7323DC;
   display: inline-block;
   border-radius: 50% !important;
 }
@@ -3520,7 +3510,7 @@ img.image-md {
 }
 
 .lists-v2 i {
-  color: #72c02c;
+  color: #7323DC;
   font-size: 13px; 
   margin-right: 7px;
   display: inline-block;
@@ -3704,7 +3694,7 @@ img.image-md {
 .color-grey { color: #95a5a6;}
 .color-dark { color: #555555;}
 .color-darker { color: #333333;}
-.color-green { color: #72c02c;}
+.color-green { color: #7323DC;}
 .color-brown { color: #9c8061;}
 .color-light { color: #ffffff;}
 .color-orange { color: #e67e22;}
@@ -3728,6 +3718,7 @@ img.image-md {
 .bg-color-light,
 .bg-color-green,
 .bg-color-brown,
+
 .bg-color-orange,
 .bg-color-green1,
 .bg-color-purple,
@@ -3748,7 +3739,7 @@ img.image-md {
 .bg-color-blue { background-color: #3498db !important;}
 .bg-color-grey { background-color: #95a5a6 !important;}
 .bg-color-light { background-color: #f7f7f7 !important;}
-.bg-color-green { background-color: #72c02c !important;}
+.bg-color-green { background-color: #7323DC !important;}
 .bg-color-brown { background-color: #9c8061 !important;}
 .bg-color-orange { background-color: #e67e22 !important;}
 .bg-color-green1 { background-color: #2ecc71 !important;}
