--- a/Go4Venue-UI/src/main/webapp/resources/assets/css/custom.css
+++ b/Go4Venue-UI/src/main/webapp/resources/assets/css/custom.css
@@ -46,3 +46,8 @@ margin: 40px auto;
 	position: absolute;
 	background: rgba(0,0,0,0.7);
 }
+.btn-u-search.btn-brd-search {
+  
+  padding: 3px 13px;
+   
+}
