Code Committed with Registration page ,Removed Venue Seeker & added OTP option thus Issue #16 is fixed

--- a/Go4Venue-UI/src/main/webapp/resources/assets/css/blocks.css
+++ b/Go4Venue-UI/src/main/webapp/resources/assets/css/blocks.css
@@ -2334,12 +2334,12 @@
 }
 
 .flat-testimonials .flat-testimonials-in p:before {
-  content: "â€œ";
+  content: "“";
   padding-right: 5px;
 }
 
 .flat-testimonials .flat-testimonials-in p:after {
-  content: "â€";
+  content: "”";
   padding-left: 5px;
 }
 
